--- a/main.css
+++ b/main.css
@@ -1,8 +1,10 @@
 .bar {
     background-color: rgb(148, 146, 11);
     width: 6px;
-    padding:0px;
-    padding-left:0px;
+    padding:10px;
+    padding-left:20px;
+    color: blanchedalmond;
+    -os;
 }
 .column {
     background-color: black;
