--- a/main.css
+++ b/main.css
@@ -1,10 +1,10 @@
 .bar {
     background-color: rgb(148, 146, 11);
-    width: 6px;
-    padding:10px;
+    width: 1px;
+    padding:1px;
     padding-left:20px;
     color: blanchedalmond;
-    -os;
+  
 }
 .column {
     background-color: black;
@@ -15,6 +15,6 @@
     width: 10px;
     vertical-align: top;
 }
-.parent{
+.root{
     background: black;
 }
