--- a/public/main.css
+++ b/public/main.css
@@ -5,7 +5,7 @@
     padding-top: 0%;
     padding-left:2px;
     color: blanchedalmond;
-  
+
 }
 .column {
     background-color: black;
@@ -19,6 +19,7 @@
 body{
     background: black;
     background-size: cover;
+
 }
 
 .slidecontainer{
@@ -44,9 +45,9 @@ input[type=range] {
    
   border: none;
    margin: 0%;
-    width:150px;
+    width:33%;
     padding-bottom: 0px;
-    padding-left: 10px;
+    padding-left: 1%;
 }
 .border-cover{
     height: 38px;
@@ -100,4 +101,90 @@ input[type=range] {
 
   .top-padding{
     padding: 1%;
+  }
+
+  .font{
+    font-size: 1rem;
+  }
+
+  @media only screen and (min-width: 320px) {
+    /* For tablets: */
+    .parent {width: 100%;}
+    .slidecontainer {width: 100%;}
+    input[type=range] {
+   
+      border: none;
+       margin: 0%;
+        width:25%;
+        padding-bottom: 0px;
+        padding-left: 1%;
+    }
+  }
+  @media only screen and (min-width: 360px) {
+    /* For tablets: */
+    .root{width: 100%;}
+    .parent {width: 100%;}
+    .slidecontainer {width: 100%;}
+    input[type=range] {
+   
+      border: none;
+       margin: 0%;
+        width:36%;
+        padding-bottom: 0px;
+        padding-left: 1%;
+    }
+  }
+
+  @media only screen and (min-width: 375px) {
+    /* For tablets: */
+    .root{width: 100%;}
+    .parent {width: 100%;}
+    .slidecontainer {width:50%;}
+    input[type=range] {
+   
+      border: none;
+       margin: 0%;
+        width:36%;
+        padding-bottom: 0px;
+        padding-left: 1%;
+    }
+  }
+  @media only screen and (min-width: 411px) {
+    /* For tablets: */
+    .parent {width: 360px;}
+    .slidecontainer {width: 50%;}
+    input[type=range] {
+   
+      border: none;
+       margin: 0%;
+        width:30%;
+        padding-bottom: 0px;
+        padding-left: 1%;
+    }
+  }
+  @media only screen and (min-width: 600px) {
+    /* For tablets: */
+    .parent {width: 100%;}
+    .slidecontainer {width: 10%;}
+    input[type=range] {
+   
+      border: none;
+       margin: 0%;
+        width:30%;
+        padding-bottom: 0px;
+        padding-left: 1%;
+    }
+  }
+  @media only screen and (min-width: 768px) {
+    /* For desktop: */
+    .parent {width: 100%; padding-left: 10%;}
+    .slidecontainer {width: 50%;}
+    input[type=range] {
+   
+      border: none;
+       margin: 0%;
+        width:30%;
+        padding-bottom: 0px;
+        padding-left: 1%;
+    }
   }
